...
}

class _BookQuestionsScreenState extends State<BookQuestionsScreen> {
  // Questions grouped by category
  bool isLoading = false;
  final Map<String, List<String>> questions = {
    "Basic Questions": [
      "What is the name of your book (if you have an idea)?",
      "What is the main idea or the subject of your book?",
    ],
    "Plot Questions": [
      "What is the starting point of the plot?",
      "What is the central conflict in the story?",
...
                    },
                  ),
                ),
                Padding(
                  padding: const EdgeInsets.all(16.0),
                  child: ElevatedButton.icon(
                    key: Key("create story"),
                    onPressed: submitStory,
                    icon: const Icon(Icons.book),
                    label: const Text("Create Story"),
                  ),
                ),
              ],
...
