...
                          "assets/img/4img.png",
                          height: 200,
                          fit: BoxFit.cover,
                        ),
                        SizedBox(height: media.height * 0.05),
                        RoundButton(
                          key: Key('sign in'),
                          title: "Sign in",
                          onPressed: () {
                            Navigator.push(
                              context,
                              MaterialPageRoute(
                                builder: (context) => const SignInView(),
...
